--- a/website/styles-unraveled.css
+++ b/website/styles-unraveled.css
@@ -1,8 +1,8 @@
 .logo1 {
-  color: #572b91; font-size: 17vmin; font-family: Italianno; display: inline-block;
+  color: #F05138; font-size: 17vmin; font-family: Italianno; display: inline-block;
 }
 .logo2 {
-  color: #572b91; font-size: 13vmin; display: inline-block;
+  color: #F05138; font-size: 13vmin; display: inline-block;
 }
 .logo3 {
   color: gray; font-size: 9vmin; font-family: Special Elite; display: inline-block;
